project/manifests/deploy-todo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-todo-backend
  namespace: dwk-mooc
  labels:
    app: project-todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-todo-backend
  template:
    metadata:
      labels:
        app: project-todo-backend
    spec:
      containers:
        - name: project-todo-backend
          image: forge.fudwin.xyz:8443/sami/dwk-project-todo-backend:dev-exercise-2p2
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: debug-app
          image: busybox:1.37.0-musl
          imagePullPolicy: Always
          command: [ "sleep", "86400"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: shared-volume
              mountPath: /data
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: shared-volume
          emptyDir: {}
