project/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
  namespace: dwk-mooc
  labels:
    app: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: forge.fudwin.xyz:8443/sami/dwk-project:dev-exercise-1p12
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: shared-volume
              mountPath: /app/cache
        - name: debug-app
          image: busybox:1.37.0-musl
          imagePullPolicy: Always
          command: [ "sleep", "86400"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: shared-volume
              mountPath: /data
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: project-pvc
