project/manifests/service-todo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-todo-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 8080
