project/manifests/service-todo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: project-todo-backend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 8080
