project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  namespace: dwk-mooc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: project.fudwin.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-todo-app-svc
                port:
                  number: 3000
          - path: /todos
            pathType: Exact
            backend:
              service:
                name: pong-todo-backend-svc
                port:
                  number: 3000
